# holoflow-cupy

./: .gitignore  README.md  config.yaml  config_cupy_naive.yaml  config_cupy_streams.yaml  config_cupy_threaded.yaml  cupy_threaded_report.txt  pyproject.toml
docs/: cupy_naive_pipeline.md
src/cupy_naive/: __init__.py  benchmark.py  compute.py  config.py  cupy_naive.py  io.py  main.py  reporting.py  schedule.py
src/cupy_streams/: __init__.py  benchmark.py  compute.py  cupy_streams.py  main.py  sanity.py  schedule.py
src/cupy_threaded/: __init__.py  benchmark.py  compute.py  cupy_threaded.py  main.py  schedule.py
src/holoflow/: main.py
src/holoflow/core/: pipeline.py
src/holoflow/ui/: gl_widget.py  main_window.py
src/holoflow_benchmarks/: __init__.py  config.py  io.py  reporting.py  runtime.py  stats.py
