[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holoflow"
version = "0.1.0"
description = "Real-time Doppler holography"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.4.4",
  "cupy-cuda13x>=14.0.1",
  "PySide6>=6.11.0",
  "PyOpenGL>=3.1.10",
  "holofile",
  "viztracer>=1.1.1",
]

[project.scripts]
holoflow = "holoflow.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/holoflow"]

[tool.uv.sources]
holofile = { git = "https://github.com/JulesGuillou/holofile.git", rev = "main" }
